--- a/SEP2/SEP2.vcxproj
+++ b/SEP2/SEP2.vcxproj
@@ -11,7 +11,24 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\Source\GameStateManager.cpp" />
+    <ClCompile Include="..\Source\Input.cpp" />
+    <ClCompile Include="..\Source\Level1.cpp" />
+    <ClCompile Include="..\Source\Level2.cpp" />
     <ClCompile Include="..\Source\main.cpp" />
+    <ClCompile Include="..\Source\pch.cpp" />
+    <ClCompile Include="..\Source\System.cpp" />
+    <ClCompile Include="..\Source\Utils.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Source\GameStateList.h" />
+    <ClInclude Include="..\Source\GameStateManager.h" />
+    <ClInclude Include="..\Source\Input.h" />
+    <ClInclude Include="..\Source\Level1.h" />
+    <ClInclude Include="..\Source\Level2.h" />
+    <ClInclude Include="..\Source\pch.h" />
+    <ClInclude Include="..\Source\System.h" />
+    <ClInclude Include="..\Source\Utils.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
