Added Splash Screen + refactor
SplashScreen.cpp
added a splash screen for digipen logo + game logo(place holder)

shifted squaremesh here since it's the first gamestate called dont create any more meshes!! use this one

main.cpp
changed 0 back to current for readibility

Utils.cpp
added function to draw images that use square mesh

general stuff:
made assets folder to put fonts and images

--- a/SEP2/SEP2.vcxproj.filters
+++ b/SEP2/SEP2.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="..\Source\Fonts.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\SplashScreen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\pch.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\Fonts.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\SplashScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
