Images and enemy\
UPDATES(25/01/2026)
Level1.cpp
- Currently for enemy testing(all the enemy code has //Enemy), I'll put it here first and transfer it when we start level2
- Collision is just a test to defeat the enemy for now, will discuss on the weapons etc another time

Player.cpp/Player.h
- Changed so it drew an image instead of the previous blue square, I kept the old code in  commented /*code*/
- Added Player_Free to release texture etc for later

ADDED FILES
- .jpg files for both easyenemy and player sprites
- READ: For the .txt files(for enemy hit count and speed) under /Data, if you want to change the value, you could do a number for 3 using '3' or '3.0'(Excluding quotes), but do note that as of now, hits is set to int(will not read the decimal) and speed is set to float(can change later)
- 'EasyEnemySpeed.txt' contains the speed for the easy enemy
- 'EasyEnemyHitCount.txt' contains the number of hits the enemy can take (used 3 for now)

enemy.h/enemy.cpp
I did a test for the enemy defeat in for collision, how it works (currently):
- The enemy should move left&right consistently
- when the enemy is hit, it stops for 0.5 seconds
- the enemy movement speed is loaded from 'EasyEnemySpeed.txt'(theres also a default value in the case it cant find the file)
- when the enemy is hit, 'LowHpOverlay.jpg'(I used a red square for now) should flash for 0.5 seconds and fade away
- When the enemy has 1 hit left, the overlay remains visible on the enemy sprite
- When the enemy has 0 hits left, the enemy sprite disappears completely

TO ADD:
- For now enemy bounds are not data-driven(like its in the code for left/right movement and where it stops), so I could make  a file for it
- making other stuff data driven I'll discuss

--- a/SEP2/SEP2.vcxproj
+++ b/SEP2/SEP2.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\Source\enemy.cpp" />
     <ClCompile Include="..\Source\Fonts.cpp" />
     <ClCompile Include="..\Source\GameStateManager.cpp" />
     <ClCompile Include="..\Source\Input.cpp" />
@@ -25,6 +26,7 @@
     <ClCompile Include="..\Source\Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Source\enemy.h" />
     <ClInclude Include="..\Source\Fonts.h" />
     <ClInclude Include="..\Source\GameStateList.h" />
     <ClInclude Include="..\Source\GameStateManager.h" />
