--- a/SEP2/SEP2.vcxproj.filters
+++ b/SEP2/SEP2.vcxproj.filters
@@ -60,10 +60,13 @@
     <ClCompile Include="..\Source\Level3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\Level4.cpp">
+    <ClCompile Include="..\Source\Boss.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\Source\LevelIndicator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -113,10 +116,13 @@
     <ClInclude Include="..\Source\Level3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\Level4.h">
+    <ClInclude Include="..\Source\Boss.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\LevelIndicator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
