Enemy and Player mechanics
UPDATES(27/01/2026)

General
- Added images and .txt files for enemies/player
- Changed everything(in the Data folder) to float for the code(Let me know if I missed any)
- I added comments within the .txt files for information regarding each file
- File for Audio(as in our Assets)

enemy.cpp
NOTE: Mechanics are just for testing, will be changing these upon further discussion
- Changed the mechanics for the easy enemy
Easy enemy mechanics:
- Now, it shoots a bullet(EasyEnemyBullet.jpg) to attack the player, both damage and speed of the bullet can be changed via 'EasyEnemyBulletDamage.txt ' & 'EasyEnemyBulletSpeed.txt'
- when the enemy is moving toward the left, make it shoot in that direction and viceversa, but it looks a little awkward rn help
- bullet disappears after either: collision with the player||its shot out of its range where the enemy shoots from
- Tested adding the hard enemy
Hard enemy mechanics:
- It patrols left&right like the easy enemy
- damage is done through collision with the player
- when colliding with the player, it will stop for 0.3s, switch to 'HardEnemyAttack.jpg' and changes back to 'HardEnemy.jpg' upon the player getting out of the collision
- after the player is out of the collision, it will return to patrol

Player.cpp/Player.h
- Added hp for player(PlayerHP.txt)
- hit text-timer for when player gets hit(just for testing for now I kept the code in comments cause I wanted to test if the player was getting hit and the updates were going way too fast)
- Added Player_ApplyDamagetoPlayer function to make sure damage can be taken from different enemies
- Player Death condition is done here
- When the Player's HP reaches 0, (placeholder) return to main menu
- Added Weapon system
Current Weapon mechanic(coded so it should be easy if we were to add another weapon):
- Press F to equip/unequip weapon
- default player: ("Assets/Images/player.jpg")
- Melee weapon (equipped): ("Assets/Images/PlayerMelee.jpg")
- for damage to

--- a/SEP2/SEP2.vcxproj
+++ b/SEP2/SEP2.vcxproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ClCompile Include="..\Source\Background.cpp" />
     <ClCompile Include="..\Source\enemy.cpp" />
+    <ClCompile Include="..\Source\EnemyBullet.cpp" />
     <ClCompile Include="..\Source\Fonts.cpp" />
     <ClCompile Include="..\Source\GameStateManager.cpp" />
     <ClCompile Include="..\Source\Input.cpp" />
@@ -34,6 +35,7 @@
   <ItemGroup>
     <ClInclude Include="..\Source\Background.h" />
     <ClInclude Include="..\Source\enemy.h" />
+    <ClInclude Include="..\Source\EnemyBullet.h" />
     <ClInclude Include="..\Source\Fonts.h" />
     <ClInclude Include="..\Source\GameStateList.h" />
     <ClInclude Include="..\Source\GameStateManager.h" />
