--- a/SEP2/SEP2.vcxproj.filters
+++ b/SEP2/SEP2.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="..\Source\EnemyBullet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\FileManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\pch.h">
@@ -135,6 +138,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\EnemyBullet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\FileManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
