Updated Cam + Platforms
REMOVED Camera.h/.cpp
⤷ both files were in SEP folder,, so i removed them

ADDED Camera.h/.cpp
⤷ added above files from Source folder
⤷ implemented fake cam function
⤷ now fake cam jumps 200.0f instead of slowly sliding up screen

UPDATED Background.h/.cpp
⤷ removed fake cam features that were previously present

UPDATED Level1.cpp
⤷ removed fake cam features
⤷ included & used cam functions

UPDATED Level2.cpp
⤷ removed fake cam features
⤷ included & used cam functions
⤷  finished adding platforms for lvl2

UPDATED Level3.cpp
⤷ removed fake cam features
⤷ started on platforms

UPDATED Boss.cpp
⤷ implemented new camera features

--- a/SEP2/SEP2.vcxproj
+++ b/SEP2/SEP2.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Source\Background.cpp" />
+    <ClCompile Include="..\Source\Camera.cpp" />
     <ClCompile Include="..\Source\enemy.cpp" />
     <ClCompile Include="..\Source\EnemyBullet.cpp" />
     <ClCompile Include="..\Source\FileManager.cpp" />
@@ -31,10 +32,10 @@
     <ClCompile Include="..\Source\SplashScreen.cpp" />
     <ClCompile Include="..\Source\System.cpp" />
     <ClCompile Include="..\Source\Utils.cpp" />
-    <ClCompile Include="Camera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Background.h" />
+    <ClInclude Include="..\Source\Camera.h" />
     <ClInclude Include="..\Source\enemy.h" />
     <ClInclude Include="..\Source\EnemyBullet.h" />
     <ClInclude Include="..\Source\FileManager.h" />
@@ -54,7 +55,6 @@
     <ClInclude Include="..\Source\SplashScreen.h" />
     <ClInclude Include="..\Source\System.h" />
     <ClInclude Include="..\Source\Utils.h" />
-    <ClInclude Include="Camera.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
